--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,9 +173,13 @@ h2 {
     transform: translateY(-5px);
 }
 
-.card h3 {
+.card h2 {
     margin-bottom: 1rem;
     font-size: 1.5rem;
+    color: #222;
+}
+
+.card p {
     color: #222;
 }
 
